--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ h1,h2,h3,h4,a,p,span,label,strong,summary{
 font-family:'Source Sans Pro', sans-serif;
 text-align:center;
 margin-bottom:20px;
-font-size: 14px;
+font-size: 13px;
 
 }
 h1,h2,h3,h4{
@@ -81,9 +81,18 @@ a,p {
     background-color: white;
     width: 95%;
     padding: 20px;
+    padding-bottom:18px;
     margin: auto;
     color: var(--main-blue);
     position:relative;
+}
+
+.statement{
+    margin-bottom:5px;
+}
+
+.signature--zone{
+    margin-top:20px;margin-bottom:5px;
 }
 
 .subtitle{
@@ -151,7 +160,7 @@ a,p {
     height: 20px;
     width: 20px;
     border: 1px solid var(--main-blue);
-    margin:auto 20px;
+    margin:auto 5px;
 }
 
 .square--reason-displaced{
@@ -209,9 +218,10 @@ a,p {
 }
 .header {
     padding: 12px 16px;
-    background: white;
+    background: #F5F5F5;
     color: var(--main-green);
     display:flex;
+
 }
 header > * {
     margin:auto;
@@ -297,6 +307,26 @@ z-index:999;
     max-width:805px;
     margin:auto;
 }
+
+.icon--DL{
+    width: 20px;
+    margin-left: 10px;
+    margin-right: 5px;
+    color:var(--main-green);
+}
+
+.list--items label {
+    display:flex;
+    margin-bottom:0;
+}
+.list--items span{
+    margin-bottom:0;
+}
+
+.list--items{
+    display:flex;
+}
+
 @media screen and ( max-width :805px){
     .mobile--version{
         display:block;
@@ -305,6 +335,20 @@ z-index:999;
     .pdf--viewer,.pdf--modifier-toggle{
         display:none;
     }
+
+    .pdf--modifier{
+        opacity:0 !important;
+        display:none !important;
+    }
+
+    .ht--logo{
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+    .pdf--modifier-DL{
+        margin-right:10px;
+    }
+    
 }
 
 
@@ -321,6 +365,19 @@ z-index:999;
     }
     .form--holder h3{
         margin-bottom:10px;
+    }
+    .pdf--bg::before {
+        background: url(https://howtank-assets-fr.s3.eu-west-3.amazonaws.com/images/covid-19-assets/exclamation.svg) 0 0 repeat;
+        background-size: 30px;
+        content: "";
+        position: absolute;
+        width: 200%;
+        height: 200%;
+        top: -50%;
+        left: -50%;
+        z-index: 0;
+        transform: rotate(15deg);
+        opacity: .1;
     }
 }
 
@@ -341,6 +398,7 @@ input[type="color"]::-webkit-color-swatch {
 
 .custom--color{
     padding:10px;
+    width:150px;
 }
 
 .themes--picker{
@@ -364,6 +422,7 @@ input[type="color"]::-webkit-color-swatch {
     border:1px solid var(--main-blue);
     margin:auto 5px ;
     border-radius:5px;
+    background-color:white;
 }
 
 .custom--color p, .themes--picker p{
@@ -419,11 +478,11 @@ input[type='file']{
 .flex-wrapper{
     display:flex;
     position:relative;
+    max-height:630px;
 }
 
 .image--uploader{
     border-radius: 3px;
-    background-color:white;
     color:var(--main-green);
     position:relative;
     padding: 25px;
@@ -431,7 +490,7 @@ input[type='file']{
 
 .input-list{
     position: absolute;
-    bottom: -50px;
+    bottom: -65px;
     left: 0;
     list-style: none;
     z-index: 100;
@@ -439,7 +498,22 @@ input[type='file']{
     padding: 15px;
     border:1px solid var(--main-blue);
     display:none;
+    width:100%;
+}
+path{
+    color:green;
 }
 .active{
     display:block !important;
+}
+
+.icon--holder{
+    width: 20px;
+    margin-right: 10px;
+}
+
+.input-list:hover span{
+
+    text-decoration:underline;
+
 }
