--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,29 @@
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700&display=swap');
+.Navbar{display:none;}
+.color-picker{padding:0 !important;}
+button{text-align:center !important;}
+p:first-of-type{margin-bottom:0;}
+.form--holder p{color:rgba(27, 206, 110 , 0.3) !important}
+.form--row-pink .square--reason:last-of-type{top: 10px;}
+
+.Main {
+    padding:0 !important;
+}
+
+.Page {
+    background-color: white;
+    padding-bottom: 0;
+    padding-top: 0;
+}
+
+
+@page {
+    margin: 0;
+}
+p:first-of-type a {
+    display: none;
+}
+.container-fluid{width:100%;max-width:100%;}
+    @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -9,7 +34,6 @@
     box-sizing: border-box;
     -webkit-print-color-adjust: exact;
 }
-@page { size:8.5in 11.4in; margin: 0 }
 html {
     font-size: 62.5%;
     scroll-behavior: smooth;
@@ -43,6 +67,37 @@ h1,h2,h3,h4{
 }
 a,p {
     font-weight:var(--title-text);
+}
+
+:root {
+    --main-blue: #034b75;
+    --main-pink: #ff5ea0;
+    --main-yellow: #ffd005;
+    --main-green: #1bce6e;  
+    --fonts-grey: #566270;
+    --padding-btn:5px 20px;
+
+    --section-margin-bottom:100px;
+    --title-font: 700;
+    --title-text: 400;
+
+    --font-size-title:50px;
+    --font-size-subtitle:38px;
+    --btn-bdr-radius:50px;
+
+
+    /*Root for Mobile */
+
+    --font-size-title_mob:30px;
+    --font-size-subtitle_mob:18px;
+    
+}   
+
+
+
+
+
+
 }
 
 :root {
@@ -327,6 +382,11 @@ z-index:999;
     display:flex;
 }
 
+.printed--img{
+    position:absolute;
+    display:none;
+}
+
 @media screen and ( max-width :805px){
     .mobile--version{
         display:block;
@@ -354,9 +414,19 @@ z-index:999;
 
 
 @media print {
+    .printed--img{
+        display:block;
+        top:0;
+        left:0;
+    }
+    body { -webkit-print-color-adjust: exact !important; }
 	header,.header,.modal--wrapper,.mobile--version{
         display:none;
     }
+
+    body { 
+        -webkit-print-color-adjust: exact; 
+      }
     .header{
         display:none;
     }
@@ -365,19 +435,6 @@ z-index:999;
     }
     .form--holder h3{
         margin-bottom:10px;
-    }
-    .pdf--bg::before {
-        background: url(https://howtank-assets-fr.s3.eu-west-3.amazonaws.com/images/covid-19-assets/exclamation.svg) 0 0 repeat;
-        background-size: 30px;
-        content: "";
-        position: absolute;
-        width: 200%;
-        height: 200%;
-        top: -50%;
-        left: -50%;
-        z-index: 0;
-        transform: rotate(15deg);
-        opacity: .1;
     }
 }
 
